<resources>

    <string name="app_name">Demo</string>
    <string name="main">首页</string>
    <string name="nearby">附近</string>
    <string name="shoppingcar">购物车</string>
    <string name="news">消息</string>
    <string name="me">我</string>

    <!--user-->
    <string name="login">登录</string>
    <string name="input_phone_number_hint">请输入账号/手机号</string>
    <string name="input_content_hint">请输入内容</string>
    <string name="input_password_hint">请输入密码</string>
    <string name="old_password_hint">请输入旧密码</string>
    <string name="new_password_hint">请输入新密码</string>
    <string name="new_again_hint">请再次输入新密码</string>
    <string name="forget_password_with_underline"><u>忘记密码</u></string>
    <string name="forget_password">忘记密码</string>
    <string name="phone_number_hint">账号/手机号</string>
    <string name="phone_number">手机号</string>
    <string name="password">密码</string>
    <string name="complete">完成</string>
    <string name="input_correct_phone_tip">请输入正确的手机号码</string>
    <string name="input_code_hint">请输入收到的验证码</string>
    <string name="code_hint">验证码</string>
    <string name="gain_code">获取验证码</string>
    <string name="loading">加载中...</string>
    <string name="loading_fail">加载失败</string>
    <string name="login_by_social">第三方登录：</string>
    <string name="confirm_pwd">确认新密码</string>
    <string name="register">注册</string>

    <string name="press_again_to_exit">再按一次退出</string>
    <string name="search_shop_and_location">搜索内容和产品</string>

</resources>
