<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/widget_toolbar_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/px20dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/widget_divider_e5_h" />

            <EditText
                android:id="@+id/phone_et"
                style="@style/Forget_Password_EditText"
                android:hint="@string/phone_number_hint"
                android:inputType="phone" />

            <include layout="@layout/widget_divider_e5_h" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:paddingRight="@dimen/px30dp">

                <EditText
                    android:id="@+id/code_et"
                    style="@style/Forget_Password_EditText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:hint="@string/code_hint"
                    android:inputType="number" />

                <View
                    android:layout_width="0.8dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/divider_e5e5e5" />

                <TextView
                    android:id="@+id/get_code_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/gain_code"
                    android:textColor="#A1A1A1"
                    android:textSize="@dimen/px26dp" />
            </LinearLayout>

            <include layout="@layout/widget_divider_e5_h" />

            <EditText
                android:id="@+id/password_et"
                style="@style/Forget_Password_EditText"
                android:drawableLeft="@mipmap/img_mima"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <include layout="@layout/widget_divider_e5_h" />

            <EditText
                android:id="@+id/confirm_password_et"
                style="@style/Forget_Password_EditText"
                android:drawableLeft="@mipmap/img_mima"
                android:hint="@string/confirm_pwd"
                android:inputType="textPassword" />

            <include layout="@layout/widget_divider_e5_h" />

            <Button
                android:id="@+id/complete_btn"
                style="@style/Main_Button"
                android:layout_marginTop="@dimen/px60dp"
                android:text="@string/complete" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
