<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/widget_toolbar_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/px310dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/px56dp"
                    android:scaleType="centerCrop"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <include layout="@layout/widget_divider_e5_h" />

                <EditText
                    android:id="@+id/phone_et"
                    style="@style/Login_EditText"
                    android:hint="@string/phone_number_hint"
                    android:inputType="phone" />

                <include layout="@layout/widget_divider_e5_h" />

                <EditText
                    android:id="@+id/password_et"
                    style="@style/Login_EditText"
                    android:drawableLeft="@mipmap/img_mima"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <include layout="@layout/widget_divider_e5_h" />
            </LinearLayout>

            <Button
                android:id="@+id/login_btn"
                style="@style/Main_Button"
                android:layout_marginTop="@dimen/px44dp"
                android:text="@string/login" />

            <TextView
                android:id="@+id/forget_password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/px36dp"
                android:layout_marginTop="@dimen/px30dp"
                android:text="@string/forget_password"
                android:textColor="#cccccc"
                android:textSize="@dimen/px28dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/px40dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_by_social" />

                <com.library.widget.CircleImageView
                    android:layout_width="@dimen/px60dp"
                    android:layout_height="@dimen/px60dp"
                    android:layout_marginLeft="@dimen/px20dp"
                    android:scaleType="centerCrop"/>

                <com.library.widget.CircleImageView
                    android:layout_width="@dimen/px60dp"
                    android:layout_height="@dimen/px60dp"
                    android:layout_marginLeft="@dimen/px20dp"
                    android:scaleType="centerCrop" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>